enable build cache

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -78,6 +78,10 @@ jobs:
         run: "curl -sSL https://cpanmin.us | perl - --sudo Carton"
         working-directory: ./scripts/linux
 
+      - uses: actions/cache@v1
+        with:
+          path: path/to/dependencies
+          key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
       - name: carton install --deployment
         shell: bash
         run: carton install --deployment
