skip test of Carton

--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: "curl -sSL https://cpanmin.us | perl - --sudo Carton"
+        run: "curl -sSL https://cpanmin.us | perl - --notest --sudo Carton"
         working-directory: ./scripts/darwin
 
       - uses: actions/cache@v1
