--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -78,15 +78,15 @@ jobs:
       - name: gcc --version
         run: gcc --version
 
+      - name: install Carton
+        shell: cmd
+        run: cpanm --notest Carton
+        working-directory: ./scripts/windows
+
       - uses: actions/cache@v1
         with:
           path: path/to/dependencies
           key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
-      - name: install Carton
-        shell: cmd
-        run: cpanm Carton
-        working-directory: ./scripts/windows
-
       - name: carton install
         shell: cmd
         run: carton install
