--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -83,7 +83,7 @@ jobs:
 
       - uses: actions/cache@v1
         with:
-          path: path/to/dependencies
+          path: scripts/darwin/local
           key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
       - name: carton install --deployment
         shell: bash
