--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -85,7 +85,7 @@ jobs:
 
       - uses: actions/cache@v1
         with:
-          path: path/to/dependencies
+          path: scripts/windows/local
           key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
       - name: carton install
         shell: cmd
