--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/tool-cache": "^1.1.2",
+    "js-yaml": "^3.13.1",
     "semver": "^6.3.0"
   },
   "devDependencies": {
