--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -1,4 +1,4 @@
-name: build perl on windows
+name: build on windows
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ on:
       - 'releases/*'
 
 jobs:
-  windows:
+  build:
     runs-on: windows-latest
     strategy:
       fail-fast: false
