--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -75,9 +75,13 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: "curl -sSL https://cpanmin.us | perl - --sudo Carton"
+        run: "curl -sSL https://cpanmin.us | perl - --notest --sudo Carton"
         working-directory: ./scripts/linux
 
+      - uses: actions/cache@v1
+        with:
+          path: scripts/linux/local
+          key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
       - name: carton install --deployment
         shell: bash
         run: carton install --deployment
