Load available versions from workflow configures (#52)
* install js-yaml
* npm audit fix
* Load available versions from workflow configures
* rename workflow configure path

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -1,16 +1,16 @@
-name: build perl on windows
+name: build on windows
 
 on:
   pull_request:
     paths:
       - 'scripts/windows/**'
-      - '.github/workflows/windows.yml'
+      - '.github/workflows/win32.yml'
   push:
     branches:
       - 'releases/*'
 
 jobs:
-  windows:
+  build:
     runs-on: windows-latest
     strategy:
       fail-fast: false
