--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -93,18 +93,13 @@ jobs:
       - name: gcc --version
         run: gcc --version
 
-      - name: install Carton
-        shell: cmd
-        run: cpanm --notest Carton
-        working-directory: ./scripts/windows
-
       - uses: actions/cache@v1
         with:
           path: scripts/windows/local
           key: ${{ runner.os }}-build-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
       - name: carton install
         shell: cmd
-        run: carton install
+        run: ../../bin/carton install
         working-directory: ./scripts/windows
 
       - name: build
