--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -54,11 +54,40 @@ jobs:
         - "5.20.1"
         - "5.20.0"
 
-        # - "5.18.4"
-        # - "5.18.3"
-        # - "5.18.2"
-        # - "5.18.1"
-        # - "5.18.0"
+        # builds fail from v5.19.2 to v5.19.11
+        # I'll try them later
+        # - "5.19.11"
+        # - "5.19.10"
+        # - "5.19.9"
+        # - "5.19.8"
+        # - "5.19.7"
+        # - "5.19.6"
+        # - "5.19.5"
+        # - "5.19.4"
+        # - "5.19.3"
+        # - "5.19.2"
+        # - "5.19.1"
+        # - "5.19.0"
+
+        - "5.18.4"
+        - "5.18.3"
+        - "5.18.2"
+        - "5.18.1"
+        - "5.18.0"
+
+        # - "5.17.11"
+        # - "5.17.10"
+        # - "5.17.9"
+        # - "5.17.8"
+        # - "5.17.7"
+        # - "5.17.6"
+        # - "5.17.5"
+        # - "5.17.4"
+        # - "5.17.3"
+        # - "5.17.2"
+        # - "5.17.1"
+        # - "5.17.0"
+
         # - "5.16.3"
         # - "5.16.2"
         # - "5.16.1"
