--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -75,6 +75,7 @@ jobs:
         - "5.18.1"
         - "5.18.0"
 
+        # TODO: fix builds from v5.17.3 to v5.17.11
         # - "5.17.11"
         # - "5.17.10"
         # - "5.17.9"
@@ -88,10 +89,11 @@ jobs:
         # - "5.17.1"
         # - "5.17.0"
 
-        # - "5.16.3"
-        # - "5.16.2"
-        # - "5.16.1"
-        # - "5.16.0"
+        - "5.16.3"
+        - "5.16.2"
+        - "5.16.1"
+        - "5.16.0"
+
         # - "5.14.4"
         # - "5.14.3"
         # - "5.14.2"
