--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -94,16 +94,17 @@ jobs:
         - "5.16.1"
         - "5.16.0"
 
-        - "5.15.9"
-        - "5.15.8"
-        - "5.15.7"
-        - "5.15.6"
-        - "5.15.5"
-        - "5.15.4"
-        - "5.15.3"
-        - "5.15.2"
-        - "5.15.1"
-        - "5.15.0"
+        # TODO: fix builds from v5.15.0 to v5.15.9
+        # - "5.15.9"
+        # - "5.15.8"
+        # - "5.15.7"
+        # - "5.15.6"
+        # - "5.15.5"
+        # - "5.15.4"
+        # - "5.15.3"
+        # - "5.15.2"
+        # - "5.15.1"
+        # - "5.15.0"
 
         - "5.14.4"
         - "5.14.3"
