--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -112,18 +112,19 @@ jobs:
         - "5.14.1"
         - "5.14.0"
 
-        - "5.13.11"
-        - "5.13.10"
-        - "5.13.9"
-        - "5.13.8"
-        - "5.13.7"
-        - "5.13.6"
-        - "5.13.5"
-        - "5.13.4"
-        - "5.13.3"
-        - "5.13.2"
-        - "5.13.1"
-        - "5.13.0"
+        # TODO: fix builds from v5.13.2 to v5.13.11
+        # - "5.13.11"
+        # - "5.13.10"
+        # - "5.13.9"
+        # - "5.13.8"
+        # - "5.13.7"
+        # - "5.13.6"
+        # - "5.13.5"
+        # - "5.13.4"
+        # - "5.13.3"
+        # - "5.13.2"
+        # - "5.13.1"
+        # - "5.13.0"
 
         - "5.12.5"
         - "5.12.4"
