--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -112,13 +112,27 @@ jobs:
         - "5.14.1"
         - "5.14.0"
 
-        # - "5.12.5"
-        # - "5.12.4"
-        # - "5.12.3"
-        # - "5.12.2"
-        # - "5.12.1"
-        # - "5.12.0"
-        # - "5.10.1"
+        # TODO: fix builds from v5.13.2 to v5.13.11
+        # - "5.13.11"
+        # - "5.13.10"
+        # - "5.13.9"
+        # - "5.13.8"
+        # - "5.13.7"
+        # - "5.13.6"
+        # - "5.13.5"
+        # - "5.13.4"
+        # - "5.13.3"
+        # - "5.13.2"
+        # - "5.13.1"
+        # - "5.13.0"
+
+        - "5.12.5"
+        - "5.12.4"
+        - "5.12.3"
+        - "5.12.2"
+        - "5.12.1"
+        - "5.12.0"
+
         # - "5.10.1"
         # - "5.10.0"
         # - "5.8.9"
@@ -154,12 +168,17 @@ jobs:
           PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
           # PERL_DL_DEBUG: "10" # enables debugging
         working-directory: ./scripts/windows
+        # continue-on-error: true
 
       # for debugging
       # - uses: actions/upload-artifact@v1
       #   with:
       #     name: perl-${{ matrix.perl }}
       #     path: C:\hostedtoolcache\windows\perl\${{ matrix.perl }}\x64
+      # - uses: actions/upload-artifact@v1
+      #   with:
+      #     name: perl-${{ matrix.perl }}
+      #     path: ${{ runner.temp }}/perl-${{ matrix.perl }}
 
       - name: upload
         shell: pwsh
