--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -133,8 +133,17 @@ jobs:
         - "5.12.1"
         - "5.12.0"
 
-        # - "5.10.1"
-        # - "5.10.0"
+        # TODO: fix me https://github.com/shogo82148/actions-setup-perl/pull/60/checks?check_run_id=341423773
+        # - "5.11.5"
+        # - "5.11.4"
+        # - "5.11.3"
+        # - "5.11.2"
+        # - "5.11.1"
+        # - "5.11.0"
+
+        - "5.10.1"
+        - "5.10.0"
+
         # - "5.8.9"
         # - "5.8.8"
         # - "5.8.7"
