upload working directory

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -196,10 +196,10 @@ jobs:
       #   with:
       #     name: perl-${{ matrix.perl }}
       #     path: C:\hostedtoolcache\windows\perl\${{ matrix.perl }}\x64
-      # - uses: actions/upload-artifact@v1
-      #   with:
-      #     name: perl-${{ matrix.perl }}
-      #     path: ${{ runner.temp }}/perl-${{ matrix.perl }}
+      - uses: actions/upload-artifact@v1
+        with:
+          name: perl-${{ matrix.perl }}
+          path: ${{ runner.temp }}/perl-${{ matrix.perl }}
 
       - name: upload
         shell: pwsh
