--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -178,7 +178,7 @@ jobs:
         run: |
           mkdir "${{ runner.temp }}/perl-wer"
           reg add HKLM\SOFTWARE\Microsoft\Windows"\Windows Error Reporting"\LocalDumps /v DumpType /t REG_DWORD /d 2
-          reg add HKLM\SOFTWARE\Microsoft\Windows"\Windows Error Reporting"\LocalDumps /v DumpFolder /t REG_EXPAND_SZ /d "${{ github.workspace }}"
+          reg add HKLM\SOFTWARE\Microsoft\Windows"\Windows Error Reporting"\LocalDumps /v DumpFolder /t REG_EXPAND_SZ /d "${{ runner.temp }}/perl-wer"
         shell: cmd
 
       - uses: actions/cache@v1
@@ -219,6 +219,7 @@ jobs:
           minidump --all *.dmp
         if: failure()
         shell: bash
+        working-directory: ${{ runner.temp }}/perl-wer
 
       - name: upload
         shell: pwsh
