update version list

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -154,9 +154,10 @@ jobs:
 
         - "5.8.9"
         - "5.8.8"
-        - "5.8.7"
-        - "5.8.6"
-        - "5.8.5"
+        # TODO: fix me
+        # - "5.8.7"
+        # - "5.8.6"
+        # - "5.8.5"
 
     steps:
       - uses: actions/checkout@v1
