--- a/.github/workflows/update-carton.yml
+++ b/.github/workflows/update-carton.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: build carton
         run: |
+          git diff
           if [[ -n "$(git status --short)" ]]; then
             make install
           fi
