improve build script

--- a/author/carton/Dockerfile
+++ b/author/carton/Dockerfile
@@ -8,3 +8,12 @@ RUN apk add --no-cache gcc libc-dev curl perl patch make wget && \
 
 ENV PATH=/opt/perl-5.8/bin:$PATH
 RUN curl --compressed -sSL https://cpanmin.us/ | perl - --notest App::FatPacker::Simple Carton ExtUtils::PL2Bat
+
+RUN mkdir -p /tmp/carton
+WORKDIR /tmp/carton
+
+COPY cpanfile .
+COPY build.pl .
+COPY cpanfile.snapshot .
+
+RUN carton install --deployment
