--- a/.github/workflows/update-carton.yml
+++ b/.github/workflows/update-carton.yml
@@ -35,7 +35,7 @@ jobs:
           git config --global user.email shogo82148@gmail.com
           git switch -c $branch
           git add .
-          git commit -m "Update cpan $(date +"%Y-%m-%d %H:%M:%S")" || exit 0
+          git commit -m "Update carton $(date +"%Y-%m-%d %H:%M:%S")" || exit 0
           header=$(echo -n "${GITHUB_ACTOR}:${GITHUB_TOKEN}" | base64)
           git -c http.extraheader="AUTHORIZATION: basic $header" push -u origin $branch
           curl -H "Authorization: token $GITHUB_TOKEN" \
