update actions/checkout to v2

--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: carton install
         shell: bash
@@ -32,7 +32,7 @@ jobs:
       - name: setup host perl
         run: perl -MConfig -E 'say "::add-path::$Config{bin}"'
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: carton install
         shell: bash
@@ -55,7 +55,7 @@ jobs:
           echo "::add-path::C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
 
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - run: "rm -f scripts/windows/cpanfile.snapshot"
         shell: bash
 
@@ -77,7 +77,7 @@ jobs:
       - windows
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: cleanup
         run: |
           rm -f scripts/linux/cpanfile.snapshot
@@ -102,16 +102,15 @@ jobs:
 
       - name: commit
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           branch=update-$(date +"%Y-%m-%d-%H-%M-%S")
           git config --global user.name "Ichinose Shogo"
           git config --global user.email shogo82148@gmail.com
-          git switch -c $branch
+          git switch -c "$branch"
           git add .
           git commit -m "Update cpanfile.snapshot $(date +"%Y-%m-%d %H:%M:%S")" || exit 0
-          header=$(echo -n "${GITHUB_ACTOR}:${GITHUB_TOKEN}" | base64)
-          git -c http.extraheader="AUTHORIZATION: basic $header" push -u origin $branch
+          git push -u origin "$branch"
           curl -H "Authorization: token $GITHUB_TOKEN" \
             -d "$(jq --arg branch $branch -n '{ "title": "Auto Update build tools", "base": "master", "head": $branch }')" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls"
