--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: 12.x
 
-    - run: npm install
+    - run: npm ci
     - run: npm run build
     - run: npm test
 
