--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: use the action
       uses: ./
       with:
-        node-version: "5.30.0"
+        perl-version: "5.30.0"
     - run: perl -V
 
     - run: npm run format-check
