--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,27 +11,30 @@ jobs:
     strategy:
       matrix:
         os:
-        - ubuntu-18.04
-        - ubuntu-16.04
-        - windows-latest
-        - macos-latest
+          - ubuntu-18.04
+          - ubuntu-16.04
+          - windows-latest
+          - macos-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: disable autocrlf
+        run: git config --global core.autocrlf false
 
-    - name: Set Node.js 12.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - run: npm ci
-    - run: npm run build
-    - run: npm test
+      - name: Set Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
-    - name: use the action
-      uses: ./
-      with:
-        perl-version: "5.30.0"
-    - run: perl -V
+      - run: npm ci
+      - run: npm run build
+      - run: npm test
 
-    - run: npm run format-check
+      - name: use the action
+        uses: ./
+        with:
+          perl-version: "5.30.0"
+      - run: perl -V
+
+      - run: npm run format-check
