--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - 'scripts/windows/**'
+      - 'scripts/lib/**'
       - '.github/workflows/win32.yml'
   push:
     branches:
