fix trigger for updating workflows

--- a/.github/workflows/update-cpanm.yml
+++ b/.github/workflows/update-cpanm.yml
@@ -4,6 +4,8 @@ on:
     paths:
       - 'author/cpanm/**'
       - '.github/workflows/update-cpanm.yml'
+    branches-ignore:
+      - 'update-cpanm-*'
   schedule:
     - cron: "22 6 * * *"
 
