--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -4,6 +4,8 @@ on:
     paths:
       - 'scripts/*/cpanfile'
       - '.github/workflows/update-build-tools.yml'
+    branches-ignore:
+      - 'update-build-tools-*'
   schedule:
     - cron: "27 23 * * *"
 
@@ -106,7 +108,7 @@ jobs:
         env:
           TOKEN: ${{ secrets.SHOGO_GITHUB_TOKEN }}
         run: |
-          branch=update-$(date +"%Y-%m-%d-%H-%M-%S")
+          branch=update-build-tools-$(date +"%Y-%m-%d-%H-%M-%S")
           git config --global user.name "Ichinose Shogo"
           git config --global user.email shogo82148@gmail.com
           git switch -c "$branch"
