--- a/.github/workflows/update-carton.yml
+++ b/.github/workflows/update-carton.yml
@@ -4,6 +4,8 @@ on:
     paths:
       - 'author/carton/**'
       - '.github/workflows/update-carton.yml'
+    branches-ignore:
+      - 'update-carton-*'
   schedule:
     - cron: "41 16 * * *"
 
