--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,9 @@ jobs:
           - ubuntu-16.04
           - windows-latest
           - macos-latest
+        dist:
+          - default
+          - strawberry
     steps:
       - name: disable autocrlf
         run: git config --global core.autocrlf false
@@ -36,6 +39,7 @@ jobs:
         uses: ./
         with:
           perl-version: "5.30.0"
+          distribution: ${{ matrix.dist }}
       - run: perl -V
 
       - run: npm run format-check
