--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,5 +42,6 @@ jobs:
           perl-version: "5.30.0"
           distribution: ${{ matrix.dist }}
       - run: perl -V
+      - run: gcc --version
 
       - run: npm run format-check
