--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -3,13 +3,13 @@ name: build on darwin
 on:
   pull_request:
     paths:
-      - 'scripts/darwin/**'
-      - 'scripts/lib/**'
-      - '.github/workflows/darwin.yml'
+      - "scripts/darwin/**"
+      - "scripts/lib/**"
+      - ".github/workflows/darwin.yml"
   push:
     branches:
-      - 'releases/*'
-      - 'master'
+      - "releases/*"
+      - "main"
 
 jobs:
   build:
@@ -18,61 +18,61 @@ jobs:
       fail-fast: false
       matrix:
         perl:
-        - "5.32.0"
-        - "5.30.3"
-        - "5.30.2"
-        - "5.30.1"
-        - "5.30.0"
-        - "5.28.3"
-        - "5.28.2"
-        - "5.28.1"
-        - "5.28.0"
-        - "5.26.3"
-        - "5.26.2"
-        - "5.26.1"
-        - "5.26.0"
-        - "5.24.4"
-        - "5.24.3"
-        - "5.24.2"
-        - "5.24.1"
-        - "5.24.0"
-        - "5.22.4"
-        - "5.22.3"
-        - "5.22.2"
-        - "5.22.1"
-        - "5.22.0"
-        - "5.20.3"
-        - "5.20.2"
-        - "5.20.1"
-        - "5.20.0"
-        - "5.18.4"
-        - "5.18.3"
-        - "5.18.2"
-        - "5.18.1"
-        - "5.18.0"
-        - "5.16.3"
-        - "5.16.2"
-        - "5.16.1"
-        - "5.16.0"
-        - "5.14.4"
-        - "5.14.3"
-        - "5.14.2"
-        - "5.14.1"
-        - "5.14.0"
-        - "5.12.5"
-        - "5.12.4"
-        - "5.12.3"
-        - "5.12.2"
-        - "5.12.1"
-        - "5.12.0"
-        - "5.10.1"
-        - "5.10.1"
-        - "5.10.0"
-        - "5.8.9"
-        - "5.8.8"
-        - "5.8.7"
-        - "5.8.6"
-        - "5.8.5"
+          - "5.32.0"
+          - "5.30.3"
+          - "5.30.2"
+          - "5.30.1"
+          - "5.30.0"
+          - "5.28.3"
+          - "5.28.2"
+          - "5.28.1"
+          - "5.28.0"
+          - "5.26.3"
+          - "5.26.2"
+          - "5.26.1"
+          - "5.26.0"
+          - "5.24.4"
+          - "5.24.3"
+          - "5.24.2"
+          - "5.24.1"
+          - "5.24.0"
+          - "5.22.4"
+          - "5.22.3"
+          - "5.22.2"
+          - "5.22.1"
+          - "5.22.0"
+          - "5.20.3"
+          - "5.20.2"
+          - "5.20.1"
+          - "5.20.0"
+          - "5.18.4"
+          - "5.18.3"
+          - "5.18.2"
+          - "5.18.1"
+          - "5.18.0"
+          - "5.16.3"
+          - "5.16.2"
+          - "5.16.1"
+          - "5.16.0"
+          - "5.14.4"
+          - "5.14.3"
+          - "5.14.2"
+          - "5.14.1"
+          - "5.14.0"
+          - "5.12.5"
+          - "5.12.4"
+          - "5.12.3"
+          - "5.12.2"
+          - "5.12.1"
+          - "5.12.0"
+          - "5.10.1"
+          - "5.10.1"
+          - "5.10.0"
+          - "5.8.9"
+          - "5.8.8"
+          - "5.8.7"
+          - "5.8.6"
+          - "5.8.5"
     steps:
       - uses: actions/checkout@v2
       - name: setup host perl
