--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ on:
   pull_request: {}
   push:
     branches-ignore:
-      - 'releases/*'
-      - 'master'
+      - "releases/*"
+      - "main"
 
 jobs:
   test:
