--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -3,13 +3,13 @@ name: build on windows
 on:
   pull_request:
     paths:
-      - 'scripts/windows/**'
-      - 'scripts/lib/**'
-      - '.github/workflows/win32.yml'
+      - "scripts/windows/**"
+      - "scripts/lib/**"
+      - ".github/workflows/win32.yml"
   push:
     branches:
-      - 'releases/*'
-      - 'master'
+      - "releases/*"
+      - "main"
 
 jobs:
   build:
@@ -18,151 +18,151 @@ jobs:
       fail-fast: false
       matrix:
         perl:
-        - "5.32.0"
-        - "5.30.3"
-        - "5.30.2"
-        - "5.30.1"
-        - "5.30.0"
-        - "5.28.3"
-        - "5.28.2"
-        - "5.28.1"
-        - "5.28.0"
-        - "5.26.3"
-        - "5.26.2"
-        - "5.26.1"
-        - "5.26.0"
-        - "5.24.4"
-        - "5.24.3"
-        - "5.24.2"
-        - "5.24.1"
-        - "5.24.0"
-        - "5.22.4"
-        - "5.22.3"
-        - "5.22.2"
-        - "5.22.1"
-        - "5.22.0"
+          - "5.32.0"
+          - "5.30.3"
+          - "5.30.2"
+          - "5.30.1"
+          - "5.30.0"
+          - "5.28.3"
+          - "5.28.2"
+          - "5.28.1"
+          - "5.28.0"
+          - "5.26.3"
+          - "5.26.2"
+          - "5.26.1"
+          - "5.26.0"
+          - "5.24.4"
+          - "5.24.3"
+          - "5.24.2"
+          - "5.24.1"
+          - "5.24.0"
+          - "5.22.4"
+          - "5.22.3"
+          - "5.22.2"
+          - "5.22.1"
+          - "5.22.0"
 
-        # - "5.21.11"
-        # - "5.21.10"
-        # #- "5.21.9" # failed with Devel-PatchPerl-1.80
-        # - "5.21.8"
-        # - "5.21.7"
-        # - "5.21.6"
-        # - "5.21.5"
-        # - "5.21.4"
-        # - "5.21.3"
-        # - "5.21.2"
-        # - "5.21.1"
-        # - "5.21.0"
+          # - "5.21.11"
+          # - "5.21.10"
+          # #- "5.21.9" # failed with Devel-PatchPerl-1.80
+          # - "5.21.8"
+          # - "5.21.7"
+          # - "5.21.6"
+          # - "5.21.5"
+          # - "5.21.4"
+          # - "5.21.3"
+          # - "5.21.2"
+          # - "5.21.1"
+          # - "5.21.0"
 
-        - "5.20.3"
-        - "5.20.2"
-        - "5.20.1"
-        - "5.20.0"
+          - "5.20.3"
+          - "5.20.2"
+          - "5.20.1"
+          - "5.20.0"
 
-        # builds fail from v5.19.2 to v5.19.11
-        # I'll try them later
-        # - "5.19.11"
-        # - "5.19.10"
-        # - "5.19.9"
-        # - "5.19.8"
-        # - "5.19.7"
-        # - "5.19.6"
-        # - "5.19.5"
-        # - "5.19.4"
-        # - "5.19.3"
-        # - "5.19.2"
-        # - "5.19.1"
-        # - "5.19.0"
+          # builds fail from v5.19.2 to v5.19.11
+          # I'll try them later
+          # - "5.19.11"
+          # - "5.19.10"
+          # - "5.19.9"
+          # - "5.19.8"
+          # - "5.19.7"
+          # - "5.19.6"
+          # - "5.19.5"
+          # - "5.19.4"
+          # - "5.19.3"
+          # - "5.19.2"
+          # - "5.19.1"
+          # - "5.19.0"
 
-        - "5.18.4"
-        - "5.18.3"
-        - "5.18.2"
-        - "5.18.1"
-        - "5.18.0"
+          - "5.18.4"
+          - "5.18.3"
+          - "5.18.2"
+          - "5.18.1"
+          - "5.18.0"
 
-        # TODO: fix builds from v5.17.3 to v5.17.11
-        # - "5.17.11"
-        # - "5.17.10"
-        # - "5.17.9"
-        # - "5.17.8"
-        # - "5.17.7"
-        # - "5.17.6"
-        # - "5.17.5"
-        # - "5.17.4"
-        # - "5.17.3"
-        # - "5.17.2"
-        # - "5.17.1"
-        # - "5.17.0"
+          # TODO: fix builds from v5.17.3 to v5.17.11
+          # - "5.17.11"
+          # - "5.17.10"
+          # - "5.17.9"
+          # - "5.17.8"
+          # - "5.17.7"
+          # - "5.17.6"
+          # - "5.17.5"
+          # - "5.17.4"
+          # - "5.17.3"
+          # - "5.17.2"
+          # - "5.17.1"
+          # - "5.17.0"
 
-        - "5.16.3"
-        - "5.16.2"
-        - "5.16.1"
-        - "5.16.0"
+          - "5.16.3"
+          - "5.16.2"
+          - "5.16.1"
+          - "5.16.0"
 
-        # TODO: fix builds from v5.15.0 to v5.15.9
-        # - "5.15.9"
-        # - "5.15.8"
-        # - "5.15.7"
-        # - "5.15.6"
-        # - "5.15.5"
-        # - "5.15.4"
-        # - "5.15.3"
-        # - "5.15.2"
-        # - "5.15.1"
-        # - "5.15.0"
+          # TODO: fix builds from v5.15.0 to v5.15.9
+          # - "5.15.9"
+          # - "5.15.8"
+          # - "5.15.7"
+          # - "5.15.6"
+          # - "5.15.5"
+          # - "5.15.4"
+          # - "5.15.3"
+          # - "5.15.2"
+          # - "5.15.1"
+          # - "5.15.0"
 
-        - "5.14.4"
-        - "5.14.3"
-        - "5.14.2"
-        - "5.14.1"
-        - "5.14.0"
+          - "5.14.4"
+          - "5.14.3"
+          - "5.14.2"
+          - "5.14.1"
+          - "5.14.0"
 
-        # TODO: fix builds from v5.13.2 to v5.13.11
-        # - "5.13.11"
-        # - "5.13.10"
-        # - "5.13.9"
-        # - "5.13.8"
-        # - "5.13.7"
-        # - "5.13.6"
-        # - "5.13.5"
-        # - "5.13.4"
-        # - "5.13.3"
-        # - "5.13.2"
-        # - "5.13.1"
-        # - "5.13.0"
+          # TODO: fix builds from v5.13.2 to v5.13.11
+          # - "5.13.11"
+          # - "5.13.10"
+          # - "5.13.9"
+          # - "5.13.8"
+          # - "5.13.7"
+          # - "5.13.6"
+          # - "5.13.5"
+          # - "5.13.4"
+          # - "5.13.3"
+          # - "5.13.2"
+          # - "5.13.1"
+          # - "5.13.0"
 
-        - "5.12.5"
-        - "5.12.4"
-        - "5.12.3"
-        - "5.12.2"
-        - "5.12.1"
-        - "5.12.0"
+          - "5.12.5"
+          - "5.12.4"
+          - "5.12.3"
+          - "5.12.2"
+          - "5.12.1"
+          - "5.12.0"
 
-        # TODO: fix me https://github.com/shogo82148/actions-setup-perl/pull/60/checks?check_run_id=341423773
-        # - "5.11.5"
-        # - "5.11.4"
-        # - "5.11.3"
-        # - "5.11.2"
-        # - "5.11.1"
-        # - "5.11.0"
+          # TODO: fix me https://github.com/shogo82148/actions-setup-perl/pull/60/checks?check_run_id=341423773
+          # - "5.11.5"
+          # - "5.11.4"
+          # - "5.11.3"
+          # - "5.11.2"
+          # - "5.11.1"
+          # - "5.11.0"
 
-        - "5.10.1"
-        - "5.10.0"
+          - "5.10.1"
+          - "5.10.0"
 
-        # TODO: fix me, builds of 5.9.x are failed
-        # - "5.9.5"
-        # - "5.9.4"
-        # - "5.9.3"
-        # - "5.9.2"
-        # - "5.9.1"
-        # - "5.9.0"
+          # TODO: fix me, builds of 5.9.x are failed
+          # - "5.9.5"
+          # - "5.9.4"
+          # - "5.9.3"
+          # - "5.9.2"
+          # - "5.9.1"
+          # - "5.9.0"
 
-        - "5.8.9"
-        - "5.8.8"
-        - "5.8.7"
-        - "5.8.6"
-        - "5.8.5"
+          - "5.8.9"
+          - "5.8.8"
+          - "5.8.7"
+          - "5.8.6"
+          - "5.8.5"
 
     steps:
       - uses: actions/checkout@v2
@@ -215,7 +215,7 @@ jobs:
         if: failure()
       - uses: actions/setup-python@v1
         with:
-          python-version: '3.x'
+          python-version: "3.x"
         if: failure()
       - run: |
           pip install minidump
