--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,7 +9,9 @@ on:
   push:
     branches:
       - "releases/*"
-      - "main"
+  schedule:
+    - cron: "15 6 * * 5"
+  workflow_dispatch:
 
 jobs:
   build:
