--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         os:
+          - ubuntu-20.04
           - ubuntu-18.04
           - ubuntu-16.04
-          - windows-latest
-          - macos-latest
+          - windows-2019
+          - macos-10.15
         dist:
           - default
           - strawberry
