--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
+    "package": "ncc build --source-map --license licenses.txt",
     "test": "jest"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/semver": "^7.3.4",
+    "@vercel/ncc": "^0.24.1",
     "jest": "^26.4.2",
     "jest-circus": "^26.4.2",
     "prettier": "^2.1.2",
