npm run package

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
 
       - run: npm ci
       - run: npm run build
+      - run: npm run package
       - run: npm test
 
       - name: use the action
