run test on main branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,8 @@ name: Main workflow
 on:
   pull_request: {}
   push:
-    branches-ignore:
-      - "releases/*"
+    branches:
+      - "main"
   workflow_dispatch:
 
 jobs:
